--- a/training/documentation/Intro Latex/Latex Introduction.ipynb
+++ b/training/documentation/Intro Latex/Latex Introduction.ipynb
@@ -17,58 +17,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World!\n"
-     ]
-    }
-   ],
    "source": [
-    "print('Hello World!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "time.sleep(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hello, Tim!'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def say_hello(recipient):\n",
-    "    return 'Hello, {}!'.format(recipient)\n",
-    "say_hello('Tim')"
+    "# Why not MS Word?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![img](https://www.johndcook.com/wordvslatex.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Documents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ### Article\n",
+    "* ### Book\n",
+    "* ### Report\n",
+    "* ### Thesis(Master, PhD)\n",
+    "* ### Term Paper\n",
+    "* ### Manual\n",
+    "* ### Tech Report\n",
+    "* ### Project Work\n",
+    "* ### Miscellaneous"
+   ]
   },
   {
    "cell_type": "code",
