--- a/training/documentation/Intro Latex/Latex Introduction.ipynb
+++ b/training/documentation/Intro Latex/Latex Introduction.ipynb
@@ -155,7 +155,84 @@
     "\n",
     "![img]{Pr1.png}\n",
     "## TeXstudio(Beamer Presentation)}\n",
-    "![img](TS.png)\n"
+    "![img](TS.png)\n",
+    "\t\t\n",
+    "![img](Be.png)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to type Mathematics\n",
+    "![img](HM.png)\n",
+    "\n",
+    "![img](EQ1.png)\n",
+    "\n",
+    "\t\n",
+    "\t\t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img](EQ.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This is my solution\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    " $x = \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a}$\n",
+    " \n",
+    "$ \\frac{d^2\\psi}{dx^2} + \\frac{2m}{\\hbar^2}(E - V)\\psi = 0$\n",
+    "\t$\\frac{d^2\\psi}{dx^2} + \\frac{2m}{\\hbar^2}(E - V)\\psi = 0$\n",
+    "\t\t\n",
+    "\n",
+    "$(\\nabla^{2} - \\frac{1}{c^2}\\frac{{\\partial}^2}{{\\partial}t^2})G(\\textbf{X}-\n",
+    "\t\t\t\\textbf{X}', t-t') = - {\\delta}(\\textbf{X}-\\textbf{X}', t-t')\\delta(t - t')$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Research Missconduct}\n",
+    "![img](MC.png)\n",
+    "[Source:](Gilbert, F. J., \\& Denison, A. R. (2003). Research Misconduct. Clinical Radiology, 58(7), 499–504. doi:10.1016/s0009-9260(03)00176-4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Home Work (Proposal Writing)\n",
+    "\n",
+    "* ### Everybody talking about economy crisis these days in Nepal. Develop a research proposal requesting for research grant to the Research Division of Tribhuvan University on one of the topics related to the economy growth of country like Nepal.\n",
+    "* ### Modern era is the science and technology era Need of supercomputer is essential in your physics department. Develop a research proposal requesting for grant to the Research Division of University Grant Commission. \n",
+    "* ### Develop a proposal with essential components for M.Sc. Thesis on any relevant topic related to Interstellar Medium to B.P. Koirala Memorial Planetarium, Science Museum development Board,Nepal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "                                            *** Thank You Very Much!!!***"
    ]
   },
   {
