--- a/training/documentation/Intro Latex/Latex Introduction.ipynb
+++ b/training/documentation/Intro Latex/Latex Introduction.ipynb
@@ -5,15 +5,15 @@
    "metadata": {},
    "source": [
     "![img](https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/LaTeX_project_logo_bird.svg/1920px-LaTeX_project_logo_bird.svg.png)\n",
-    "* ### LaTeX is a high quality typesetting system which can produce modern technical and scientific documents such as Article, Report, Thesis,Term Paper, Project work, Book, and Beamer Presentation.\n",
-    "* ### Developed by Leslie B. Lamport (born February 7, 1941) is an American computer scientist.\t\n",
+    "*  LaTeX is a high quality typesetting system which can produce modern technical and scientific documents such as Article, Report, Thesis,Term Paper, Project work, Book, and Beamer Presentation.\n",
+    "*  Developed by Leslie B. Lamport (born February 7, 1941) is an American computer scientist.\t\n",
     "![img](https://upload.wikimedia.org/wikipedia/commons/5/50/Leslie_Lamport.jpg)\n",
     "[Link:](https://upload.wikimedia.org/wikipedia/commons/5/50/Leslie_Lamport.jpg)\n",
-    "* ### Uses commands to create mathematical symbols.\n",
-    "* ###\tMicrosoft Word is based on a principle called ``What you see is what you get''(WYSIWYG),\\color{blue} which means that the user immediately sees the document on the screen as it will appear on the printed page.\n",
-    "* ### LaTeX is based on the principle of ``What you get is what you mean''(WYGIWYM), which implies that the document is not directly displayed on the screen and changes, such as format settings, are not immediately visible.\n",
-    "* ### The final document is obtained by converting the source file (.tex file) into a pdf file.\n",
-    "* ### It is widely used in academia for the communication and publication of scientific and technical documents.\n",
+    "*  Uses commands to create mathematical symbols.\n",
+    "* \tMicrosoft Word is based on a principle called ``What you see is what you get''(WYSIWYG),\\color{blue} which means that the user immediately sees the document on the screen as it will appear on the printed page.\n",
+    "*  LaTeX is based on the principle of ``What you get is what you mean''(WYGIWYM), which implies that the document is not directly displayed on the screen and changes, such as format settings, are not immediately visible.\n",
+    "*  The final document is obtained by converting the source file (.tex file) into a pdf file.\n",
+    "*  It is widely used in academia for the communication and publication of scientific and technical documents.\n",
     "### References:\n",
     "* Knauff, M., \\& Nejasmic, J., An Efficiency Comparison of Document Preparation Systems Used in Academic Research and Development. PloS one, 9(12), (2014)."
    ]
@@ -30,7 +30,7 @@
    "metadata": {},
    "source": [
     "![img](https://www.johndcook.com/wordvslatex.gif)\n",
-    "[Image source](https://www.johndcook.com/wordvslatex.gif)\n",
+    "[Image source:](https://www.johndcook.com/wordvslatex.gif)\n",
     "![img](LW.png)"
    ]
   },
@@ -45,15 +45,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ### Article\n",
-    "* ### Book\n",
-    "* ### Report\n",
-    "* ### Thesis(Master, PhD)\n",
-    "* ### Term Paper\n",
-    "* ### Manual\n",
-    "* ### Tech Report\n",
-    "* ### Project Work\n",
-    "* ### Miscellaneous"
+    "*  Article\n",
+    "*  Book\n",
+    "* Report\n",
+    "* Thesis(Master, PhD)\n",
+    "*  Term Paper\n",
+    "*  Manual\n",
+    "* Tech Report\n",
+    "* Project Work\n",
+    "*  Miscellaneous"
    ]
   },
   {
@@ -91,8 +91,7 @@
     "towards the creation and compilation of LaTeX\n",
     "documents...\n",
     "![img](WE1.png)\n",
-    "\\footnote{https://www.winedt.com/(April, 2020).}\n",
-    "\\footnote{https://en.wikipedia.org/wiki/WinEdt(April, 2020).}\n"
+    "[Source:](https://www.winedt.com/)\n"
    ]
   },
   {
@@ -108,7 +107,7 @@
    "metadata": {},
    "source": [
     "![img](WE.png)\n",
-    "\\footnote(https://www.winedt.com/(April, 2020).)"
+    "[Source:](https://www.winedt.com/)"
    ]
   },
   {
@@ -121,7 +120,7 @@
     "tools needed to develop documents with LaTeX, in just one\n",
     "application.\n",
     "![img](Te.png)\n",
-    "\\footnote{https://www.xm1math.net/texmaker/shots.html(April, 2020).}\n"
+    "[Source:](https://www.xm1math.net/texmaker/shots.html)\n"
    ]
   },
   {
@@ -129,16 +128,16 @@
    "metadata": {},
    "source": [
     "## TeXstudio\n",
-    " TeXstudio is an integrated writing environment for creating LaTeX documents. Our goal is to make writing LaTeX as easy and comfortable as possible. Therefore TeXstudio has numerous features like syntax-highlighting, integrated viewer, reference checking and various assistants. \\\\\n",
-    "\\color{red}\n",
+    " TeXstudio is an integrated writing environment for creating LaTeX documents. Our goal is to make writing LaTeX as easy and comfortable as possible. Therefore TeXstudio has numerous features like syntax-highlighting, integrated viewer, reference checking and various assistants.\n",
+    "\n",
     "### For Ubuntu Linux:  Use command\n",
     "* sudo apt-get update\n",
     "* TeXstudio: sudo apt-get install texstudio\n",
     "\n",
     "### For windows users:  download and install\n",
     "* texstudio: https://texstudio.org/\n",
-    "* miktex:  \\color{blue} https://miktex.org/download\n",
-    "\\footnote{https://www.texstudio.org/(April, 2020).}\t\n"
+    "* miktex:   https://miktex.org/download\n",
+    "[Source:](https://www.texstudio.org/)\n"
    ]
   },
   {
@@ -223,16 +222,16 @@
    "source": [
     "## Home Work (Proposal Writing)\n",
     "\n",
-    "* ### Everybody talking about economy crisis these days in Nepal. Develop a research proposal requesting for research grant to the Research Division of Tribhuvan University on one of the topics related to the economy growth of country like Nepal.\n",
-    "* ### Modern era is the science and technology era Need of supercomputer is essential in your physics department. Develop a research proposal requesting for grant to the Research Division of University Grant Commission. \n",
-    "* ### Develop a proposal with essential components for M.Sc. Thesis on any relevant topic related to Interstellar Medium to B.P. Koirala Memorial Planetarium, Science Museum development Board,Nepal"
+    "*  Everybody talking about economy crisis these days in Nepal. Develop a research proposal requesting for research grant to the Research Division of Tribhuvan University on one of the topics related to the economy growth of country like Nepal.\n",
+    "*  Modern era is the science and technology era Need of supercomputer is essential in your physics department. Develop a research proposal requesting for grant to the Research Division of University Grant Commission. \n",
+    "*  Develop a proposal with essential components for M.Sc. Thesis on any relevant topic related to Interstellar Medium to B.P. Koirala Memorial Planetarium, Science Museum development Board,Nepal"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "                                            *** Thank You Very Much!!!***"
+    "                                           *** Thank You Very Much !!!***"
    ]
   },
   {
