--- a/training/documentation/Intro Latex/Latex Introduction.ipynb
+++ b/training/documentation/Intro Latex/Latex Introduction.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## WinEdt"
+    "## WinEdit"
    ]
   },
   {
@@ -167,17 +167,7 @@
     "## How to type Mathematics\n",
     "![img](HM.png)\n",
     "\n",
-    "![img](EQ1.png)\n",
-    "\n",
-    "\t\n",
     "\t\t"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![img](EQ.png)\n"
    ]
   },
   {
@@ -191,11 +181,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    " ![img](EQ1.png)\n",
+    " ## x = \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a}\n",
     " $x = \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a}$\n",
     " \n",
-    "$ \\frac{d^2\\psi}{dx^2} + \\frac{2m}{\\hbar^2}(E - V)\\psi = 0$\n",
-    "\t$\\frac{d^2\\psi}{dx^2} + \\frac{2m}{\\hbar^2}(E - V)\\psi = 0$\n",
+    "##  \\frac{d^2\\psi}{dx^2} + \\frac{2m}{\\hbar^2}(E - V)\\psi = 0\n",
+    "$\\frac{d^2\\psi}{dx^2} + \\frac{2m}{\\hbar^2}(E - V)\\psi = 0$\n",
+    "    \n",
+    "  ![img](EQ.png)\n",
+    "\n",
     "\t\t\n",
     "\n",
     "$(\\nabla^{2} - \\frac{1}{c^2}\\frac{{\\partial}^2}{{\\partial}t^2})G(\\textbf{X}-\n",
@@ -210,11 +204,6 @@
     "![img](MC.png)\n",
     "[Source:](Gilbert, F. J., \\& Denison, A. R. (2003). Research Misconduct. Clinical Radiology, 58(7), 499–504. doi:10.1016/s0009-9260(03)00176-4)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
