--- a/training/documentation/Intro Latex/Latex Introduction.ipynb
+++ b/training/documentation/Intro Latex/Latex Introduction.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "![img](https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/LaTeX_project_logo_bird.svg/1920px-LaTeX_project_logo_bird.svg.png)\n",
-    "*  LaTeX is a high quality typesetting system which can produce modern technical and scientific documents such as Article, Report, Thesis,Term Paper, Project work, Book, and Beamer Presentation.\n",
+    "*  LaTeX is a high quality typesetting system which can produce modern technical and scientific documents such as article, report, thesis, term paper, project work, book, and beamer presentation.\n",
     "*  Developed by Leslie B. Lamport (born February 7, 1941) is an American computer scientist.\t\n",
     "![img](https://upload.wikimedia.org/wikipedia/commons/5/50/Leslie_Lamport.jpg)\n",
     "[Link:](https://upload.wikimedia.org/wikipedia/commons/5/50/Leslie_Lamport.jpg)\n",
     "*  Uses commands to create mathematical symbols.\n",
-    "* \tMicrosoft Word is based on a principle called ``What you see is what you get''(WYSIWYG),\\color{blue} which means that the user immediately sees the document on the screen as it will appear on the printed page.\n",
+    "* \tMicrosoft Word is based on a principle called ``What you see is what you get''(WYSIWYG), which means that the user immediately sees the document on the screen as it will appear on the printed page.\n",
     "*  LaTeX is based on the principle of ``What you get is what you mean''(WYGIWYM), which implies that the document is not directly displayed on the screen and changes, such as format settings, are not immediately visible.\n",
     "*  The final document is obtained by converting the source file (.tex file) into a pdf file.\n",
     "*  It is widely used in academia for the communication and publication of scientific and technical documents.\n",
