--- a/training/documentation/Intro Latex/Latex Introduction.ipynb
+++ b/training/documentation/Intro Latex/Latex Introduction.ipynb
@@ -220,15 +220,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "                                           *** Thank You Very Much !!!***"
+    "                                           *** Thank You Very Much !!!***\n",
+    " ![img](Thn.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
