--- a/training/documentation/Intro Latex/Latex Introduction.ipynb
+++ b/training/documentation/Intro Latex/Latex Introduction.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![img](https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/LaTeX_project_logo_bird.svg/1920px-LaTeX_project_logo_bird.svg.png)\n",
+    "# Introduction to LaTex\n",
+    "![img](https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/LaTeX_project_logo_bird.svg/1920px-LaTeX_project_logo_bird.svg.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "### LaTeX is a high quality typesetting system which can produce modern technical and scientific documents such as article, report, thesis, term paper, project work, book, and beamer presentation.\n",
     "*  Developed by Leslie B. Lamport (born February 7, 1941) is an American computer scientist.\t\n",
     "![img](https://upload.wikimedia.org/wikipedia/commons/5/50/Leslie_Lamport.jpg)\n",
@@ -19,10 +27,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Why not MS Word?"
    ]
@@ -33,7 +39,8 @@
    "source": [
     "![img](https://www.johndcook.com/wordvslatex.gif)\n",
     "[Image source:](https://www.johndcook.com/wordvslatex.gif)\n",
-    "![img](LW.png)"
+    "![img](LW.png)\n",
+    "![img](logo.png)"
    ]
   },
   {
@@ -131,15 +138,31 @@
    "source": [
     "## TeXstudio\n",
     " TeXstudio is an integrated writing environment for creating LaTeX documents. Our goal is to make writing LaTeX as easy and comfortable as possible. Therefore TeXstudio has numerous features like syntax-highlighting, integrated viewer, reference checking and various assistants.\n",
-    "\n",
+    "## How to install in my PC?\n",
     "### For Ubuntu Linux:  Use command\n",
+    "* Ctrl + Alt + T\n",
     "* sudo apt-get update\n",
-    "* TeXstudio: sudo apt-get install texstudio\n",
+    "* sudo apt-get install texstudio\n",
+    "* Type texstudio\n",
     "\n",
-    "### For windows users:  download and install\n",
+    "### For windows & mac users:  download texstudio and miktex install\n",
     "* texstudio: https://texstudio.org/\n",
     "* miktex:   https://miktex.org/download\n",
     "[Source:](https://www.texstudio.org/)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img](F.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img](1.png)"
    ]
   },
   {
@@ -234,14 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37.5 degree Celsius is equal to 99.5 degree Fahrenheit\n"
+      "50.0 degree Celsius is equal to 122.0 degree Fahrenheit\n"
      ]
     }
    ],
@@ -249,7 +272,7 @@
     "# Python Program to convert temperature in celsius to fahrenheit\n",
     "\n",
     "# change this value for a different result\n",
-    "celsius = 37.5\n",
+    "celsius = 50\n",
     "\n",
     "# calculate fahrenheit\n",
     "fahrenheit = (celsius * 1.8) + 32\n",
@@ -702,6 +725,62 @@
    "source": [
     "                                          *** Thank You Very Much !!!***\n",
     " ![img](Thn.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print('x+y')? (<ipython-input-3-586d95bff2d3>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-586d95bff2d3>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    print 'x+y'\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print('x+y')?\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x=3\n",
+    "y=4\n",
+    "print 'x+y'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37.5 degree Celsius is equal to 41.0 Fareheniet \n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=5\n",
+    "y=3\n",
+    "z=x//y\n",
+    "print(z)"
    ]
   },
   {
